tweaks for one of the stretch goals
